<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background">

    <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pb_confirm_order"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="gone">
    </ProgressBar>


    <ScrollView
        android:id="@+id/sv_confirm_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rl_inputs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_link_accounts"
            android:layout_centerHorizontal="true">

            <RelativeLayout
                android:id="@+id/rl_close_confirm_order"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/close_icon"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_order_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_close_confirm_order"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/suggestion_text_color"
                android:textSize="19dp"
                android:textStyle="bold"
                android:text="@string/confirm_order_text"/>

            <EditText
                android:id="@+id/et_order_name"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@+id/tv_order_confirm"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:inputType="textPersonName"
                android:gravity="center"
                android:hint="@string/name_profile_text"
                android:textColorHint="@color/profile_hint_text_color"
                android:textColor="@color/black"
                android:background="@drawable/edittext_profile_background" />

            <EditText
                android:id="@+id/et_order_last_name"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@+id/et_order_name"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:inputType="textPersonName"
                android:gravity="center"
                android:hint="@string/last_name_profile_text"
                android:textColorHint="@color/profile_hint_text_color"
                android:textColor="@color/black"
                android:background="@drawable/edittext_profile_background" />

            <TextView
                android:id="@+id/tv_mail_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_order_last_name"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/suggestion_text_color"
                android:text="@string/mail_ticket_text"/>

            <EditText
                android:id="@+id/et_order_mail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@+id/tv_mail_ticket"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:inputType="textEmailAddress"
                android:gravity="center"
                android:hint="@string/user_email_text"
                android:textColorHint="@color/profile_hint_text_color"
                android:textColor="@color/black"
                android:background="@drawable/edittext_profile_background" />

            <TextView
                android:id="@+id/tv_suscription_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_order_mail"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/suggestion_text_color"
                android:textSize="16dp"
                android:text="@string/suscription_text"/>

            <TextView
                android:id="@+id/tv_suscription_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_suscription_details"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/suggestion_text_color"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="$PRICE"/>

            <RelativeLayout
                android:id="@+id/rl_provider_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_suscription_price"
                android:layout_marginTop="40dp">
                <ImageView
                    android:id="@+id/iv_order_provider_icon"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp" />

                <TextView
                    android:id="@+id/tv_order_provider_comision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp"
                    android:textSize="16dp"
                    android:text="@string/comission_text"
                    android:textColor="@color/suggestion_text_color" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_order_confirm"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@+id/rl_provider_info"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/link_email_account_button_background"
                android:text="@string/confirm_text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>