<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:id="@+id/rl_chocolate_exam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/chocolate_exam_background">

            <TextView
                android:id="@+id/tv_chocolate_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/chocolate_exam_text"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_without_time_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_chocolate_exam"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/without_time_text"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_step_by_step_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_without_time_1"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:text="@string/step_by_step_text"
                android:textColor="@color/white"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_real_exam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_chocolate_exam"
            android:layout_marginTop="60dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/real_exam_background">
            <TextView
                android:id="@+id/tv_not_fake_exam"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/not_fake_exam_text"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/gray_line"
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:layout_below="@+id/tv_not_fake_exam"
                android:layout_centerHorizontal="true"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/tv_without_time_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gray_line"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/without_time_text"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_step_by_step_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_without_time_2"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:text="@string/step_by_step_text"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>